welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: reassignment to val
getMondeHauteur = l;
                ^Array1:6: error: reassignment to val
getMondeLargeur = p;
                ^Array1:10: error: not found: type i
	T[i] == getCouleurSol();
          ^